lib/src/ffi/y_dart_bindings_generated.dart


  /// Returns a null-terminated UTF-8 encoded string representation of an `update` binary payload,
  /// encoded using lib0 v1 encoding.
  /// Returns null if update couldn't be parsed into a lib0 v1 formatting.
  ffi.Pointer<ffi.Char> yupdate_debug_v1(
    ffi.Pointer<ffi.Char> update,
    int update_len,
  ) {
    return _yupdate_debug_v1(
      update,
      update_len,
    );
  }

  late final _yupdate_debug_v1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Uint32)>>('yupdate_debug_v1');
  late final _yupdate_debug_v1 = _yupdate_debug_v1Ptr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  /// Returns a null-terminated UTF-8 encoded string representation of an `update` binary payload,
  /// encoded using lib0 v2 encoding.
  /// Returns null if update couldn't be parsed into a lib0 v2 formatting.
  ffi.Pointer<ffi.Char> yupdate_debug_v2(
    ffi.Pointer<ffi.Char> update,
    int update_len,
  ) {
    return _yupdate_debug_v2(
      update,
      update_len,
    );
  }

  late final _yupdate_debug_v2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Uint32)>>('yupdate_debug_v2');
  late final _yupdate_debug_v2 = _yupdate_debug_v2Ptr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  /// Applies an diff update (generated by `ytransaction_state_diff_v1`) to a local transaction's
  /// document.
  ///
  /// A length of generated `diff` binary must be passed within a `diff_len` out parameter.
  ///
  /// Returns an error code in case if transaction succeeded failed:
  /// - **0**: success
  /// - `ERR_CODE_IO` (**1**): couldn't read data from input stream.
  /// - `ERR_CODE_VAR_INT` (**2**): decoded variable integer outside of the expected integer size bounds.
  /// - `ERR_CODE_EOS` (**3**): end of stream found when more data was expected.
  /// - `ERR_CODE_UNEXPECTED_VALUE` (**4**): decoded enum tag value was not among known cases.
  /// - `ERR_CODE_INVALID_JSON` (**5**): failure when trying to decode JSON content.
  /// - `ERR_CODE_OTHER` (**6**): other error type than the one specified.
  int ytransaction_apply(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> diff,
    int diff_len,
  ) {
    return _ytransaction_apply(
      txn,
      diff,
      diff_len,
    );
  }

  late final _ytransaction_applyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>,
              ffi.Uint32)>>('ytransaction_apply');
  late final _ytransaction_apply = _ytransaction_applyPtr.asFunction<
      int Function(ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>, int)>();

  /// Applies an diff update (generated by [ytransaction_state_diff_v2]) to a local transaction's
  /// document.
  ///
  /// A length of generated `diff` binary must be passed within a `diff_len` out parameter.
  ///
  /// Returns an error code in case if transaction succeeded failed:
  /// - **0**: success
  /// - `ERR_CODE_IO` (**1**): couldn't read data from input stream.
  /// - `ERR_CODE_VAR_INT` (**2**): decoded variable integer outside of the expected integer size bounds.
  /// - `ERR_CODE_EOS` (**3**): end of stream found when more data was expected.
  /// - `ERR_CODE_UNEXPECTED_VALUE` (**4**): decoded enum tag value was not among known cases.
  /// - `ERR_CODE_INVALID_JSON` (**5**): failure when trying to decode JSON content.
  /// - `ERR_CODE_OTHER` (**6**): other error type than the one specified.
  int ytransaction_apply_v2(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> diff,
    int diff_len,
  ) {
    return _ytransaction_apply_v2(
      txn,
      diff,
      diff_len,
    );
  }

  late final _ytransaction_apply_v2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>,
              ffi.Uint32)>>('ytransaction_apply_v2');
  late final _ytransaction_apply_v2 = _ytransaction_apply_v2Ptr.asFunction<
      int Function(ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>, int)>();

  /// Returns the length of the `YText` string content in bytes (without the null terminator character)
  int ytext_len(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytext_len(
      txt,
      txn,
    );
  }

  late final _ytext_lenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('ytext_len');
  late final _ytext_len = _ytext_lenPtr.asFunction<
      int Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns a null-terminated UTF-8 encoded string content of a current `YText` shared data type.
  ///
  /// Generated string resources should be released using [ystring_destroy] function.
  ffi.Pointer<ffi.Char> ytext_string(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytext_string(
      txt,
      txn,
    );
  }

  late final _ytext_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('ytext_string');
  late final _ytext_string = _ytext_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Inserts a null-terminated UTF-8 encoded string a given `index`. `index` value must be between
  /// 0 and a length of a `YText` (inclusive, accordingly to [ytext_len] return value), otherwise this
  /// function will panic.
  ///
  /// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
  /// ownership over a passed value - it will be copied and therefore a string parameter must be
  /// released by the caller.
  ///
  /// A nullable pointer with defined `attrs` will be used to wrap provided text with
  /// a formatting blocks. `attrs` must be a map-like type.
  void ytext_insert(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<YInput> attrs,
  ) {
    return _ytext_insert(
      txt,
      txn,
      index,
      value,
      attrs,
    );
  }

  late final _ytext_insertPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<YInput>)>>('ytext_insert');
  late final _ytext_insert = _ytext_insertPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int,
          ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>();

  /// Wraps an existing piece of text within a range described by `index`-`len` parameters with
  /// formatting blocks containing provided `attrs` metadata. `attrs` must be a map-like type.
  void ytext_format(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    int len,
    ffi.Pointer<YInput> attrs,
  ) {
    return _ytext_format(
      txt,
      txn,
      index,
      len,
      attrs,
    );
  }

  late final _ytext_formatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32, ffi.Pointer<YInput>)>>('ytext_format');
  late final _ytext_format = _ytext_formatPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int,
          ffi.Pointer<YInput>)>();

  /// Inserts an embed content given `index`. `index` value must be between 0 and a length of a
  /// `YText` (inclusive, accordingly to [ytext_len] return value), otherwise this
  /// function will panic.
  ///
  /// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
  /// ownership over a passed value - it will be copied and therefore a string parameter must be
  /// released by the caller.
  ///
  /// A nullable pointer with defined `attrs` will be used to wrap provided text with
  /// a formatting blocks. `attrs` must be a map-like type.
  void ytext_insert_embed(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<YInput> content,
    ffi.Pointer<YInput> attrs,
  ) {
    return _ytext_insert_embed(
      txt,
      txn,
      index,
      content,
      attrs,
    );
  }

  late final _ytext_insert_embedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<YInput>,
              ffi.Pointer<YInput>)>>('ytext_insert_embed');
  late final _ytext_insert_embed = _ytext_insert_embedPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int,
          ffi.Pointer<YInput>, ffi.Pointer<YInput>)>();

  /// Performs a series of changes over the given `YText` shared ref type, described by the `delta`
  /// parameter:
  ///
  /// - Deltas constructed with `ydelta_input_retain` will move cursor position by the given number
  /// of elements. If formatting attributes were defined, all elements skipped over this way will be
  /// wrapped by given formatting attributes.
  /// - Deltas constructed with `ydelta_input_delete` will tell cursor to remove a corresponding
  /// number of elements.
  /// - Deltas constructed with `ydelta_input_insert` will tell cursor to insert given elements into
  /// current cursor position. While these elements can be of any type (used for embedding ie.
  /// shared types or binary payload like images), for the text insertion a `yinput_string`
  /// is expected. If formatting attributes were specified, inserted elements will be wrapped by
  /// given formatting attributes.
  void ytext_insert_delta(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<YDeltaIn> delta,
    int delta_len,
  ) {
    return _ytext_insert_delta(
      txt,
      txn,
      delta,
      delta_len,
    );
  }

  late final _ytext_insert_deltaPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Pointer<YDeltaIn>, ffi.Uint32)>>('ytext_insert_delta');
  late final _ytext_insert_delta = _ytext_insert_deltaPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<YDeltaIn>, int)>();

  /// Creates a parameter for `ytext_insert_delta` function. This parameter will move cursor position
  /// by the `len` of elements. If formatting `attrs` were defined, all elements skipped over this
  /// way will be wrapped by given formatting attributes.
  YDeltaIn ydelta_input_retain(
    int len,
    ffi.Pointer<YInput> attrs,
  ) {
    return _ydelta_input_retain(
      len,
      attrs,
    );
  }

  late final _ydelta_input_retainPtr = _lookup<
          ffi
          .NativeFunction<YDeltaIn Function(ffi.Uint32, ffi.Pointer<YInput>)>>(
      'ydelta_input_retain');
  late final _ydelta_input_retain = _ydelta_input_retainPtr
      .asFunction<YDeltaIn Function(int, ffi.Pointer<YInput>)>();

  /// Creates a parameter for `ytext_insert_delta` function. This parameter will tell cursor to remove
  /// a corresponding number of elements, starting from current cursor position.
  YDeltaIn ydelta_input_delete(
    int len,
  ) {
    return _ydelta_input_delete(
      len,
    );
  }

  late final _ydelta_input_deletePtr =
      _lookup<ffi.NativeFunction<YDeltaIn Function(ffi.Uint32)>>(
          'ydelta_input_delete');
  late final _ydelta_input_delete =
      _ydelta_input_deletePtr.asFunction<YDeltaIn Function(int)>();
